# server/mysql/models/song.js
@@ -10,11 +10,11 @@ var SongAct = {};
 SongAct.createSong = function (req, res) {
     pool.getConnection(function (err, conn) {
         if (err) throw err;
-
+        console.log('createSong', req.body);
         var info = req.body;
-        info.songUrl = '/public/songs/' + info.belong + '/' + info.artist + ' - ' + info.song + '.mp3';
-        info.imageUrl = '/public/images/' + info.belong + '/' + info.artist + ' - ' + info.song + '.jpg';
-        conn.query('INSERT INTO music SET ?', info, function (err, result) {
+        var time = (new Date()).getTime();
+        info.url = '/public/songs/' + time + '.mp3';
+        conn.query('INSERT INTO songs SET ?', info, function (err, result) {
             if (err) throw err;
 
             res.json('SAVED');
@@ -27,10 +27,16 @@ SongAct.loadSong = function (req, res) {
     pool.getConnection(function (err, conn) {
         if (err) throw err;
 
-        var belong = req.swagger.params.label.value;
-        conn.query('SELECT * FROM music WHERE belong = ?', belong, function (err, result) {
+        var label = {};
+        for (var item in req.swagger.params) {
+            if (req.swagger.params[item].value) {
+                label[item] = req.swagger.params[item].value;
+            }            
+        }
+  
+        conn.query('SELECT * FROM songs WHERE ?', label, function (err, result) {
             if (err) throw err;
-            SongMethods.songClassify(belong, result, function (info) {
+            SongMethods.songClassify(label, result, function (info) {
                 res.json(info);
             });
         });
